--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ logging.pattern.rolling-file-name=${LOG_FILE}.%d{yyyy-MM-dd}.%i.log
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.username=n.samandar1502@gmail.com
-spring.mail.password=Samandar!56?green?142A
+spring.mail.password=*****************
 
 
 # TLS , port 587
